[gd_scene load_steps=2 format=2]

[ext_resource path="res://UserManager.gd" type="Script" id=1]

[node name="UserManager" type="Node2D"]
script = ExtResource( 1 )

[node name="StampaLista" type="Button" parent="."]
margin_left = 316.534
margin_top = 346.841
margin_right = 638.534
margin_bottom = 427.841
text = "STAMPA LISTA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CodiceUtente" type="TextEdit" parent="."]
margin_left = 313.878
margin_top = 81.0406
margin_right = 634.878
margin_bottom = 125.041
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Punti" type="TextEdit" parent="."]
margin_left = 313.878
margin_top = 176.45
margin_right = 634.878
margin_bottom = 220.45
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Livelli" type="TextEdit" parent="."]
margin_left = 318.367
margin_top = 261.757
margin_right = 639.367
margin_bottom = 305.757
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 315.0
margin_top = 52.8775
margin_right = 634.0
margin_bottom = 79.8775
text = "CODICE UTENTE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 316.122
margin_top = 148.287
margin_right = 635.122
margin_bottom = 175.287
text = "PUNTI"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 318.367
margin_top = 232.471
margin_right = 637.367
margin_bottom = 259.471
text = "LIVELLI"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AggiungiUtente" type="Button" parent="."]
margin_left = 315.0
margin_top = 435.358
margin_right = 640.0
margin_bottom = 511.358
text = "AGGIUNGI UTENTE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset" type="Button" parent="."]
margin_left = 316.26
margin_top = 517.253
margin_right = 641.26
margin_bottom = 593.253
text = "RESET"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="StampaLista" to="." method="_on_StampaLista_pressed"]
[connection signal="pressed" from="AggiungiUtente" to="." method="_on_AggiungiUtente_pressed"]
[connection signal="pressed" from="Reset" to="." method="_on_Reset_pressed"]
